[package]
name = "roguelike_ccg"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_traitobject = "0.1.3"
bincode = "1.1.4"
vulkano-shaders = "0.11"
vulkano-win = "0.11"
vulkano = "0.11"
winit = "0.18"
image = "0.21"
rand = "*"

[dependencies.events]
git = "https://github.com/pypypypypypypypypyp/events"

[dependencies.math_lib]
git = "https://github.com/pypypypypypypypypyp/math_lib"

[dependencies.array_tuple]
git = "https://github.com/pypypypypypypypypyp/array_tuple"

[dependencies.limiter]
git = "https://github.com/pypypypypypypypypyp/limiter"

[dependencies.terminal]
git = "https://github.com/pypypypypypypypypyp/terminal"
